Fix comments not wrapping.
git-svn-id: http://svn.omploader.org/trunk/omploader@118 f3e9fb10-4bd1-4be2-8a77-beb9a613051d

--- a/_style.css
+++ b/_style.css
@@ -280,7 +280,8 @@ div#container div.comment {
 	overflow: hidden;
 }
 
-div#container div.comment pre {
+div#container div.comment div.body {
+	font-family: monospace;
 	font-size: 1.2em;
 	text-align: left;
 	margin: 5px 0px 5px 0px;
